# Style-Bert-VITS2

./: .gitignore  AGENTS.md  CLAUDE.md  app.py  bert_gen.py  check_dataset_integrity.py  config.py  convert_bert_onnx.py  convert_onnx.py  data_utils.py  external_spk_emb_gen.py  initialize.py  preprocess_all.py  preprocess_text.py  pyproject.toml  requirements-colab.txt  requirements-infer.txt  requirements-minimal.txt  requirements.txt  resample.py  server_editor.py  server_fastapi.py  slice.py  speaker_embedding_gen.py  speech_mos.py  style_gen.py  train_ms.py  train_ms_jp_extra.py  train_ms_nanairo.py  transcribe.py
configs/: config_jp_extra.json  config_nanairo.json
docs/: CLI.md
gradio_tabs/: convert_onnx.py  dataset.py  inference.py  merge.py  style_vectors.py  train.py
scripts/: utils.py
scripts/benchmark/: bert_int8_benchmark.py  bert_int8_precision_test.py  long_inference_benchmark.py  module_timing_benchmark.py  optimization_experiments.py  streaming_benchmark.py  tensor_padding_benchmark.py  torch_compile_benchmark.py
scripts/research/: debug_memory_profiling.py  phoneme_duration_probe.py  realistic_memory_profiling.py  vowel_stretch_experiment.py
scripts/speaker_adapter/: apply_axes_demo.py  cluster_char_embeddings.py  dump_g.py  eval_speaker_similarity.py  external_speaker_adapter.md  extract_axes.py
style_bert_vits2/: constants.py  tts_model.py
style_bert_vits2/models/: attentions.py  commons.py  hyper_parameters.py  infer.py  infer_onnx.py  models.py  models_jp_extra.py  models_nanairo.py  modules.py  tensor_padding.py
style_bert_vits2/models/utils/: __init__.py  checkpoints.py  safetensors.py
style_bert_vits2/nlp/: __init__.py  nanairo_emoji.py  symbols.py
style_bert_vits2/nlp/japanese/: bert_feature.py  g2p.py  g2p_utils.py  itaiji_map.py  normalizer.py
style_bert_vits2/nlp/japanese/pyopenjtalk_worker/: __init__.py  worker_client.py  worker_common.py  worker_server.py
style_bert_vits2/nlp/japanese/user_dict/: word_model.py
style_bert_vits2/utils/: __init__.py  paths.py  style_strength.py  training.py
tests/: .gitignore  bert_int8_benchmark.py  bert_int8_precision_test.py  debug_memory_profiling.py  long_inference_benchmark.py  module_timing_benchmark.py  optimization_experiments.py  phoneme_duration_probe.py  realistic_memory_profiling.py  streaming_benchmark.py  tensor_padding_benchmark.py  test_g2p.py  test_main.py  test_nanairo_compat.py  test_normalizer.py  torch_compile_benchmark.py  utils.py  vowel_stretch_experiment.py
training/: data_utils.py  default_style.py  losses.py  mel_processing.py  runtime.py  utils.py
