[build-system]
requires = ["uv_build>=0.9.21"]
build-backend = "uv_build"

[project]
name = "style-bert-vits2"
version = "2.7.0"
description = "Style-Bert-VITS2: Bert-VITS2 with more controllable voice styles."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
license-files = ["LICENSE", "LGPL_LICENSE"]
keywords = []
authors = [
    { name = "litagin02", email = "139731664+litagin02@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "aivmlib",
    "cmudict",
    "cn2an",
    "e2k>=0.6.1",
    "g2p_en",
    "jaconv",
    "jieba",
    "loguru",
    # nltk 3.8.1 より新しいバージョンでは、追加のモデルダウンロードが必要になったり
    # 速度低下などの問題が発生するため、意図的に固定している
    "nltk<=3.8.1",
    "num2words",
    "numpy>=2.0",
    "pydantic>=2.0",
    "pyopenjtalk-plus>=0.4.1.post7",
    "pypinyin",
    "pyworld-prebuilt>=0.3.5.post2",
    "safetensors",
    # transformers 4.50.0 以降、なぜか ku-nlp/deberta-v2-large-japanese-char-wwm (日本語用 BERT) が
    # ロード時にハングアップするため、やむを得ず当面の間 4.50.0 未満に固定する
    # ref: https://github.com/huggingface/transformers/issues/36803
    "transformers<4.50.0",
]

# ライブラリ利用者向けのオプション依存関係
## バージョンやバリアントは利用者側で柔軟に指定できるよう、最低限の制約のみ記載
[project.optional-dependencies]
# ONNX Runtime はどのみち pyopenjtalk-plus で利用されるため必須
## ただし CPU 版・CUDA 版・DirectML 版でパッケージが分かれており環境依存になるため、直接の依存関係には含めない
## CPU 版の onnxruntime (無印) と onnxruntime-gpu や onnxruntime-directml は共存できない
onnxruntime = [
    "onnxruntime; (sys_platform != 'linux' or platform_machine != 'x86_64') and sys_platform != 'win32'",
    "onnxruntime-directml; sys_platform == 'win32'",
    "onnxruntime-gpu; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# PyTorch モデルで推論を行う場合は別途必須
## numba は monotonic_alignment.py で使用されている
torch = [
    "accelerate",
    "numba",
    "torch>=2.1",
]

# 単体利用時の依存関係グループ
[dependency-groups]
## 単体利用時の共通依存関係
## ONNX Runtime と PyTorch のバージョン・バリアントを固定し、開発ツールも含む
## Usage: uv sync (or: uv sync --group core)
core = [
    # ONNX Runtime 関連 (project.optional-dependencies.onnxruntime に相当)
    # 必須依存関係なので、単体利用時はインストールされるバリアントを上記と同じロジックで固定する
    "onnxruntime; (sys_platform != 'linux' or platform_machine != 'x86_64') and sys_platform != 'win32'",
    "onnxruntime-directml; sys_platform == 'win32'",
    "onnxruntime-gpu; sys_platform == 'linux' and platform_machine == 'x86_64'",
    # PyTorch 関連 (project.optional-dependencies.torch に相当)
    # 単体利用で ONNX 版推論だけ回すユースケースは極めて考えづらいので、常に PyTorch 関連も必須依存関係に含める
    # PyTorch のバリアントは tool.uv.sources で torch / torchaudio のソース指定で固定している
    "accelerate",
    "numba",
    "torch>=2.9.1,<2.10.0",
    # 開発関連ツール
    # 比較的サイズが小さいため core に含める
    "coverage[toml]>=6.5",
    "pytest",
    "pyright",
    "ruff",
    "scipy",
    "taskipy",
]
## ONNX 変換ツールの依存関係 (convert_onnx.py, convert_bert_onnx.py)
## Usage: uv sync --group tools
tools = [
    { include-group = "core" },
    "onnx",
    "onnxconverter-common",
    "onnxsim-prebuilt>=0.4.39.post2",
    "protobuf>=4.25",
    "rich",
]
## FastAPI サーバーの依存関係 (server_fastapi.py, server_editor.py)
## Usage: uv sync --group server
server = [
    { include-group = "core" },
    "fastapi",
    "GPUtil",
    "psutil",
    "requests",
    "uvicorn",
]
## Gradio WebUI の依存関係 (app.py, gradio_tabs/*)
## Usage: uv sync --group webui
## Usage (学習も行う場合): uv sync --group webui --group train
webui = [
    { include-group = "core" },
    "gradio>=4.32",
    "pyyaml",
    "umap-learn",
]
## 学習・前処理の依存関係 (train_ms*.py, style_gen.py, resample.py 等)
## Usage: uv sync --group train
train = [
    { include-group = "core" },
    "anime-speaker-embedding",
    "librosa>=0.11.0",
    "matplotlib",
    "pyannote.audio>=4.0.3",
    "pyloudnorm",
    "speechbrain>=1.0.3",
    "tensorboard",
    "torchaudio>=2.9.1,<2.10.0",
    "torchcodec>=0.9.1,<0.10.0",
    "utmosv2",
]
## ここまでの依存関係を全てインストールするグループ
## Usage: uv sync --group full
full = [
    { include-group = "tools" },
    { include-group = "server" },
    { include-group = "webui" },
    { include-group = "train" },
]

# タスクランナーのタスク定義
## Usage: uv run task <task-name>
[tool.taskipy.tasks]
## リント・フォーマット
lint = "ruff check --fix . ; pyright"
format = "ruff format ."
typecheck = "pyright"
## 正規化テスト
test-normalizer = "pytest -s tests/test_normalizer.py"
## PyTorch 推論テスト
test = "pytest -s tests/test_main.py::test_synthesize_cpu"
test-cuda = "pytest -s tests/test_main.py::test_synthesize_cuda"
## ONNX 推論テスト
test-onnx = "pytest -s tests/test_main.py::test_synthesize_onnx_cpu"
test-onnx-cuda = "pytest -s tests/test_main.py::test_synthesize_onnx_cuda"
test-onnx-tensorrt = "pytest -s tests/test_main.py::test_synthesize_onnx_tensorrt"
test-onnx-directml = "pytest -s tests/test_main.py::test_synthesize_onnx_directml"
test-onnx-coreml = "pytest -s tests/test_main.py::test_synthesize_onnx_coreml"

# uv sync 実行時にデフォルトで core グループがインストールされるようにする
[tool.uv]
default-groups = ["core"]

# ビルド設定
[tool.uv.build-backend]
# ルートにパッケージがあるため module-root を空にする
module-root = ""
# sdist に含めるファイル（pyproject.toml とモジュール本体は自動で含まれる）
source-include = [
    ".vscode/**",
    "dict_data/default.csv",
    "docs/**",
    "tests/**",
    "LGPL_LICENSE",
    "LICENSE",
    "README.md",
]
# sdist から除外するファイル
source-exclude = [
    ".git",
    ".gitignore",
    ".gitattributes",
]

[tool.uv.sources]
e2k = { git = "https://github.com/tsukumijima/e2k.git", rev = "9920754e15d8c96404bef0bd81d424352fb7a48b" }
# pyannote.audio 4.x が torchaudio / torchcodec 周りの非互換性を理由に torch/torchaudio を 2.8.0 に固定しているため、
# torch/torchaudio の固定を解除したフォークを利用する
"pyannote.audio" = { git = "https://github.com/tsukumijima/pyannote-audio.git", rev = "8ef26980df1126469979565bf84f637c8a8f6d3c" }
# speechbrain は2026年1月時点ではまだ PyTorch 2.9 以降に対応していないため、開発版を利用する
# ref: https://github.com/speechbrain/speechbrain/issues/3012
speechbrain = { git = "https://github.com/speechbrain/speechbrain.git", rev = "264b642d7820547f02ae25cba028a4ae96f0e88f" }
# torch / torchaudio のソース指定
# Windows x64・Linux x64: CUDA 12.8 版
# macOS・その他: PyPI から CPU 版
torch = [
    { index = "pytorch-cu128", marker = "(sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "(sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'win32'" },
]
# UTMOSv2 は PyPI に公開されていないため GitHub から取得する
utmosv2 = { git = "https://github.com/sarulab-speech/UTMOSv2.git", rev = "b4528c0418acca38c1c5c92a40c3e4a1e216fbbe" }

# PyTorch の CUDA 12.8 版のパッケージインデックス
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.coverage.run]
source_pkgs = ["style_bert_vits2", "tests"]
branch = true
parallel = true
omit = ["style_bert_vits2/constants.py"]

[tool.coverage.paths]
style_bert_vits2 = ["style_bert_vits2", "*/style-bert-vits2/style_bert_vits2"]
tests = ["tests", "*/style-bert-vits2/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
# 1行の長さを最大88文字に設定
line-length = 88
# インデントの幅を4スペースに設定
indent-width = 4
# Python 3.10 を利用する
target-version = "py310"
# 以下のディレクトリは対象から除外する
extend-exclude = [
    "Data/",
    "inputs/",
    "model_assets/",
    "static/",
]

[tool.ruff.lint]
# flake8, pycodestyle, pyupgrade, isort, Ruff 固有のルールを使う
select = ["F", "E", "W", "UP", "I", "RUF"]
ignore = [
    "E402",    # Module level import not at top of file を抑制 (style_bert_vits2 モジュール外のコードで発生する)
    "E501",    # 1行の長さを超えている場合の警告を抑制
    "E722",    # Do not use bare 'except' を抑制
    "E731",    # Do not assign a `lambda` expression, use a `def` を抑制
    "E741",    # Ambiguous variable name を抑制
    "F401",    # Module imported but unused を抑制
    "F841",    # Local variable is assigned to but never used を抑制
    "RUF001",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF002",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF003",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF005",  # collection-literal-concatenation を抑制
    "RUF017",  # quadratic-list-summation を抑制
    "RUF034",  # useless-if-else を抑制
    "RUF059",  # Unpacked variable `xxx` is never used を抑制
]

[tool.ruff.lint.isort]
# インポートブロックの後に2行空ける
lines-after-imports = 2

[tool.ruff.format]
# ダブルクオートを使う
quote-style = "double"
# インデントにはスペースを使う
indent-style = "space"

[tool.pyright]
# 型チェック対象の Python バージョンを指定
pythonVersion = "3.11"
# TypeCheckingMode を strict に設定（VSCode の設定と同等）
typeCheckingMode = "strict"
# プロジェクトルートを指定
pythonPlatform = "All"
# インクルードするパッケージパス
# TODO: 型安全でないコードが多いため、当面一部ファイルのみ型チェックを行わない
include = [
    "style_bert_vits2/",
    "scripts/",
    "tests/",
    # Gradio WebUI
    # "gradio_tabs/",
    "app.py",
    # HTTP サーバー
    "server_editor.py",
    "server_fastapi.py",
    # 前処理スクリプト
    "bert_gen.py",
    "check_dataset_integrity.py",
    "speaker_embedding_gen.py",
    "preprocess_all.py",
    "preprocess_text.py",
    "resample.py",
    "slice.py",
    "style_gen.py",
    "transcribe.py",
    # 学習スクリプト
    "train_ms.py",
    "train_ms_jp_extra.py",
    "train_ms_nanairo.py",
    # 学習スクリプトから呼ばれるモジュール
    "training/",
    # ユーティリティー
    "convert_bert_onnx.py",
    "convert_onnx.py",
    "initialize.py",
    "speech_mos.py",
]
# 除外するパス
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
]
# VSCode の settings.json の diagnosticSeverityOverrides に対応する設定
reportConstantRedefinition = "none"
reportDeprecated = "none"  # 修正コストの観点で抑制
reportGeneralTypeIssues = "warning"
reportMissingParameterType = "warning"
reportMissingImports = "none"  # 全部の依存関係をインストールすると重いので抑制
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"
reportPrivateUsage = "warning"
reportUnnecessaryComparison = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "information"
